--- a/index.html
+++ b/index.html
@@ -6,13 +6,74 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Admin Dashboard</title>
   <link rel="stylesheet" href="style.css">
+  <link href="https://fonts.googleapis.com/css2?family=Ysabeau&display=swap" rel="stylesheet">
 </head>
 <body>
 
     <div class='grid'>
 
       <div class='sidebar'>
-        <p>SIDEBAR</p>
+
+        <div class='logo-div'>
+          <img src='https://cdn-icons-png.flaticon.com/512/1483/1483463.png' alt='tribe-icon'>
+        <h1>RainDance Festival</h1>
+        <h2 class='subheading'><em>Let's get wet.</em></h2>
+      </div>
+
+      <div class='nav-grid'>
+
+        <div class='nav-grid-item'>
+          <img src='https://cdn-icons-png.flaticon.com/512/812/812071.png' alt='home'>
+          <p>Home</p>
+        </div>
+
+        <div class='nav-grid-item'>
+          <img src='https://cdn-icons-png.flaticon.com/512/669/669299.png'>
+          <p>Profile</p>
+        </div>
+
+        <div class='nav-grid-item'>
+          <img src='https://cdn-icons-png.flaticon.com/512/2089/2089181.png'>
+          <p>Messages</p>
+        </div>
+
+        <div class='nav-grid-item'>
+          <img src='https://cdn-icons-png.flaticon.com/512/66/66163.png'>
+          <p>History</p>
+        </div>
+
+        <div class='nav-grid-item'>
+          <img src='https://cdn-icons-png.flaticon.com/512/287/287179.png'>
+          <p>Tasks</p>
+        </div>
+
+        <div class='nav-grid-item'>
+          <img src='https://cdn-icons-png.flaticon.com/512/4350/4350908.png'>
+          <p>Communities</p>
+        </div>
+
+      </div>
+
+      <div class='tools-grid'>
+
+        <div class='tools-grid-item'>
+          <img src='https://cdn-icons-png.flaticon.com/512/126/126472.png'>
+          <p>Settings</p>
+        </div>
+
+        <div class='tools-grid-item'>
+          <img src='https://cdn-icons-png.flaticon.com/512/3566/3566427.png'>
+          <p>Support</p>
+        </div>
+
+        <div class='tools-grid-item'>
+          <img src='https://cdn-icons-png.flaticon.com/512/4104/4104794.png'>
+          <p>Privacy</p>
+        </div>
+
+      </div>
+
+
       </div>
 
       <div class='header'>
@@ -21,6 +82,11 @@
 
       <div class='main-content-container'>
         <p>MAIN CONTENT CONTAINER</p>
+      </div>
+
+      <div class='footer'>
+        <p>Built by RedBevan</p>
+        <a href="https://www.flaticon.com/free-icons/" title="dance icons">Icons from Flaticon</a>
       </div>
 
 
