--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
 </head>
 <body>
 
-    <div class='grid'>
+    <div class='page-grid'>
 
       <div class='sidebar'>
 
         <div class='logo-div'>
           <img src='https://cdn-icons-png.flaticon.com/512/1483/1483463.png' alt='tribe-icon'>
-        <h1>RainDance Festival</h1>
+        <h1>RainDance Club</h1>
         <h2 class='subheading'><em>Let's get wet.</em></h2>
       </div>
 
@@ -73,11 +73,31 @@
 
       </div>
 
-
       </div>
 
       <div class='header'>
-        <p>HEADER</p>
+
+        <div class='header-grid'>
+
+          <div class='search-bar'>
+            <img src='https://cdn-icons-png.flaticon.com/512/1167/1167092.png' alt='search'>
+            <input type='text'>
+          </div>
+
+          <div class='header-profile'>
+            BIG DOG DINGLE
+          </div>
+
+          <div class='welcome-message'>
+            WELCOME
+          </div>
+
+          <div class='header-buttons'>
+            BUTTONS
+          </div>
+
+        </div>
+
       </div>
 
       <div class='main-content-container'>
