--- a/index.html
+++ b/index.html
@@ -15,20 +15,20 @@
       <div class='sidebar'>
 
         <div class='logo-div'>
-          <img src='https://cdn-icons-png.flaticon.com/512/1483/1483463.png' alt='tribe-icon'>
-        <h1>RainDance Club</h1>
-        <h2 class='subheading'><em>Let's get wet.</em></h2>
+          <img src='https://cdn-icons-png.flaticon.com/512/104/104176.png' alt='bird-icon'>
+        <h1>Beaky Flyers</h1>
+        <h2 class='subheading'><em>Home of the birding community.</em></h2>
       </div>
 
       <div class='nav-grid'>
 
         <div class='nav-grid-item'>
-          <img src='https://cdn-icons-png.flaticon.com/512/812/812071.png' alt='home'>
+          <img src='https://cdn-icons-png.flaticon.com/512/87/87955.png' alt='home'>
           <p>Home</p>
         </div>
 
         <div class='nav-grid-item'>
-          <img src='https://cdn-icons-png.flaticon.com/512/669/669299.png'>
+          <img src='https://cdn-icons-png.flaticon.com/512/1946/1946429.png'>
           <p>Profile</p>
         </div>
 
@@ -43,7 +43,7 @@
         </div>
 
         <div class='nav-grid-item'>
-          <img src='https://cdn-icons-png.flaticon.com/512/287/287179.png'>
+          <img src='https://cdn-icons-png.flaticon.com/512/338/338653.png'>
           <p>Tasks</p>
         </div>
 
@@ -85,7 +85,7 @@
           </div>
 
           <div class='header-profile'>
-            BIG DOG DINGLE
+            YOUR PROFILE
           </div>
 
           <div class='welcome-message'>
